--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -26,7 +26,7 @@
         		<p:clock class="timer" pattern="dd/MM/yyyy HH:mm:ss" />
         	</main>
         	<section>
-        		<div>
+        		<div class="alarm">
         			<h:outputText class="title-value" value="Temperatura" />
         			<h:outputText class="subtitle-value" value="21.0 C°" />
         			<h:outputText class="subtitle-status" value="Normal" />
