--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -24,12 +24,13 @@
         	</header>
         	<main>
         		<p:clock class="timer" pattern="dd/MM/yyyy HH:mm:ss" />
+        		
         	</main>
         	<section>
         		<div class="alarm">
         			<h:outputText class="title-value" value="Temperatura" />
         			<h:outputText class="subtitle-value" value="21.0 C°" />
-        			<h:outputText class="subtitle-status" value="Normal" />
+        			<h:outputText class="subtitle-status" value="#{alarmeBean.title}" />
         		</div>
         		<div>
         			<h:outputText class="title-value" value="Gás" />
